--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Spectral by HTML5 UP</title>
+    <title>AmirTheAnalyst</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -46,9 +46,9 @@
         <div class="inner">
           <h2>Amir The Analyst - Project Portfolio</h2>
           <p>
-            Business Intelligence Developer showcasing different projects in
-            SQL, Python and Data Vizualisation
-            <a href="https://www.linkedin.com/in/amir-sadovic/"> - Linkedin</a>.
+            Passionate tech enthusiast showcasing different projects in SQL,
+            Python and Data Vizualisation.
+            <a href="https://www.linkedin.com/in/amir-sadovic/"> - Linkedin</a>
           </p>
         </div>
         <a href="#one" class="more scrolly">Learn More</a>
@@ -58,15 +58,12 @@
       <section id="one" class="wrapper style1 special">
         <div class="inner">
           <header class="major">
-            <h2>
-              Arcu aliquet vel lobortis ata nisl<br />
-              eget augue amet aliquet nisl cep donec
-            </h2>
+            <h2>My name is Amir Sadovic<br /></h2>
             <p>
-              Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet
-              eleifend<br />
-              fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus
-              ullamcorper.
+              I currently work as a business intelligence developer. This
+              website will showcase different projects in the data science
+              specter. I hope you enjoy and find it interesting - and most
+              important: Get some inspiration.<br />
             </p>
           </header>
           <ul class="icons major">
@@ -94,13 +91,10 @@
         <section class="spotlight">
           <div class="image"><img src="images/data.jpg" alt="" /></div>
           <div class="content">
-            <h2>
-              Magna primis lobortis<br />
-              sed ullamcorper
-            </h2>
+            <h2>Webscraping with Python<br /></h2>
             <p>
-              Aliquam ut ex ut augue consectetur interdum. Donec hendrerit
-              imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.
+              TBD
+              <a href="link is coming"> See project</a>
             </p>
           </div>
         </section>
@@ -108,26 +102,20 @@
           <div class="image"><img src="images/pic02.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Tortor dolore feugiat<br />
-              elementum magna
+              Project 2<br />
+              TBD
             </h2>
-            <p>
-              Aliquam ut ex ut augue consectetur interdum. Donec hendrerit
-              imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.
-            </p>
+            <p>Description TBD</p>
           </div>
         </section>
         <section class="spotlight">
           <div class="image"><img src="images/pic03.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Augue eleifend aliquet<br />
-              sed condimentum
+              Project 3<br />
+              TBD
             </h2>
-            <p>
-              Aliquam ut ex ut augue consectetur interdum. Donec hendrerit
-              imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.
-            </p>
+            <p>Description TBD</p>
           </div>
         </section>
       </section>
