--- a/index.html
+++ b/index.html
@@ -22,32 +22,17 @@
     <div id="page-wrapper">
       <!-- Header -->
       <header id="header" class="alt">
-        <h1><a href="index.html">Spectral</a></h1>
-        <nav id="nav">
-          <ul>
-            <li class="special">
-              <a href="#menu" class="menuToggle"><span>Menu</span></a>
-              <div id="menu">
-                <ul>
-                  <li><a href="index.html">Home</a></li>
-                  <li><a href="generic.html">Generic</a></li>
-                  <li><a href="elements.html">Elements</a></li>
-                  <li><a href="#">Sign Up</a></li>
-                  <li><a href="#">Log In</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </nav>
+        <h1><a href="index.html">AmirTheAnalyst</a></h1>
+        <nav id="nav"></nav>
       </header>
 
       <!-- Banner -->
       <section id="banner">
         <div class="inner">
-          <h2>Amir The Analyst - Project Portfolio</h2>
+          <h2>Amir Analytics - Project Portfolio</h2>
           <p>
             Passionate tech enthusiast showcasing different projects in SQL,
-            Python and Data Vizualisation.
+            Python and Data Vizualisation
             <a href="https://www.linkedin.com/in/amir-sadovic/"> - Linkedin</a>
           </p>
         </div>
@@ -89,7 +74,7 @@
       <!-- Two -->
       <section id="two" class="wrapper alt style2">
         <section class="spotlight">
-          <div class="image"><img src="images/data.jpg" alt="" /></div>
+          <div class="image"><img src="images/webscraping.jpg" alt="" /></div>
           <div class="content">
             <h2>Webscraping with Python<br /></h2>
             <p>
