--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <section class="spotlight">
           <div class="image"><img src="images/webscraping.jpg" alt="" /></div>
           <div class="content">
-            <h2>Webscraping with Python<br /></h2>
+            <h2>
+              Webscraping with Python - Football data from Understat <br />
+            </h2>
             <p>
               TBD
               <a href="link is coming"> See project</a>
@@ -84,27 +86,42 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><img src="images/pic02.jpg" alt="" /></div>
+          <div class="image"><img src="images/process.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Project 2<br />
-              TBD
+              Creating a ETL Process - Pulling and Transforming Data From the
+              Webscraping Project<br />
             </h2>
-            <p>Description TBD</p>
+            <p>
+              TBD
+              <a href="link is coming"> See project</a>
+            </p>
           </div>
         </section>
         <section class="spotlight">
           <div class="image"><img src="images/pic03.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Project 3<br />
-              TBD
+              Creating a Datamodel & DataWarehouse - Pulling Data From the ETL
+              Process <br />
             </h2>
-            <p>Description TBD</p>
+            <p>
+              TBD
+              <a href="link is coming"> See project</a>
+            </p>
           </div>
         </section>
       </section>
-
+      <section class="spotlight">
+        <div class="image"><img src="images/process.jpg" alt="" /></div>
+        <div class="content">
+          <h2>Data Vizualisation - Creating a Dashboard<br /></h2>
+          <p>
+            TBD
+            <a href="link is coming"> See project</a>
+          </p>
+        </div>
+      </section>
       <!-- Three -->
       <section id="three" class="wrapper style3 special">
         <div class="inner">
