--- a/index.html
+++ b/index.html
@@ -77,11 +77,15 @@
           <div class="image"><img src="images/webscraping.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Webscraping with Python - Football data from Understat <br />
+              Webscraping with Python - Football data from Understat. Getting
+              rawdata from Europes top 5 leagues <br />
             </h2>
             <p>
-              TBD
-              <a href="link is coming"> See project</a>
+              <a
+                href="https://github.com/Amir-Analytics/Webscraping-from-Understat.git"
+              >
+                See project</a
+              >
             </p>
           </div>
         </section>
