--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <!-- Banner -->
       <section id="banner">
         <div class="inner">
-          <h2>Amir Analytics - Project Portfolio</h2>
+          <h2>Amir Analytics - My Personal Project Portfolio</h2>
           <p>
-            Passionate tech enthusiast showcasing different projects in SQL,
-            Python and Data Vizualisation
+            Passionate tech enthusiast showcasing different projects in Python,
+            SQL and Data Vizualisation
             <a href="https://www.linkedin.com/in/amir-sadovic/"> - Linkedin</a>
           </p>
         </div>
@@ -46,28 +46,10 @@
             <h2>My name is Amir Sadovic<br /></h2>
             <p>
               I currently work as a business intelligence developer. This
-              website will showcase different projects in the data science
-              specter. I hope you enjoy and find it interesting - and most
+              website will showcase different projects in the BI field.
+              I hope you enjoy and find it interesting - and most
               important: Get some inspiration.<br />
             </p>
-          </header>
-          <ul class="icons major">
-            <li>
-              <span class="icon fa-gem major style1"
-                ><span class="label">Lorem</span></span
-              >
-            </li>
-            <li>
-              <span class="icon fa-heart major style2"
-                ><span class="label">Ipsum</span></span
-              >
-            </li>
-            <li>
-              <span class="icon solid fa-code major style3"
-                ><span class="label">Dolor</span></span
-              >
-            </li>
-          </ul>
         </div>
       </section>
 
@@ -93,8 +75,8 @@
           <div class="image"><img src="images/process.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Creating a ETL Process - Pulling and Transforming Data From the
-              Webscraping Project<br />
+              Creating a Database in PostgreSQL - Cleaning & Transforming Data
+              From the Webscraping Project<br />
             </h2>
             <p>
               TBD
@@ -106,8 +88,8 @@
           <div class="image"><img src="images/pic03.jpg" alt="" /></div>
           <div class="content">
             <h2>
-              Creating a Datamodel & DataWarehouse - Pulling Data From the ETL
-              Process <br />
+              Data Vizualisation & Advanced Analytics - Creating a Dashboard
+              <br />
             </h2>
             <p>
               TBD
@@ -115,16 +97,6 @@
             </p>
           </div>
         </section>
-      </section>
-      <section class="spotlight">
-        <div class="image"><img src="images/process.jpg" alt="" /></div>
-        <div class="content">
-          <h2>Data Vizualisation - Creating a Dashboard<br /></h2>
-          <p>
-            TBD
-            <a href="link is coming"> See project</a>
-          </p>
-        </div>
       </section>
       <!-- Three -->
       <section id="three" class="wrapper style3 special">
@@ -185,48 +157,11 @@
         </div>
       </section>
 
-      <!-- CTA -->
-      <section id="cta" class="wrapper style4">
-        <div class="inner">
-          <header>
-            <h2>Arcue ut vel commodo</h2>
-            <p>
-              Aliquam ut ex ut augue consectetur interdum endrerit imperdiet
-              amet eleifend fringilla.
-            </p>
-          </header>
-          <ul class="actions stacked">
-            <li><a href="#" class="button fit primary">Activate</a></li>
-            <li><a href="#" class="button fit">Learn More</a></li>
-          </ul>
-        </div>
-      </section>
-
       <!-- Footer -->
       <footer id="footer">
         <ul class="icons">
-          <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-dribbble"
-              ><span class="label">Dribbble</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon solid fa-envelope"
+          <li> Any questions? Get in touch
+            <a href="mailto: amir.sadovic@noria.no" class="icon solid fa-envelope"
               ><span class="label">Email</span></a
             >
           </li>
