--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><img src="images/process.jpg" alt="" /></div>
+          <div class="image"><img src="images/database5.jpg" alt="" /></div>
           <div class="content">
             <h2>
               Creating a Database in PostgreSQL - Cleaning & Transforming Data
