--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </h2>
             <p>
               TBD
-              <a href="link is coming"> See project</a>
+              <a href="https://github.com/Amir-Analytics/SQL.git"> See project</a>
             </p>
           </div>
         </section>
