--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
               From the Webscraping Project<br />
             </h2>
             <p>
-              TBD
-              <a href="link is coming"> See project</a>
+              Work in Progress
+              <a href="https://github.com/Amir-Analytics/SQL.git"> See project</a>
             </p>
           </div>
         </section>
@@ -93,7 +93,7 @@
             </h2>
             <p>
               TBD
-              <a href="https://github.com/Amir-Analytics/SQL.git"> See project</a>
+              <a href="Link is coming"> See project</a>
             </p>
           </div>
         </section>
