--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </section>
         <section class="spotlight">
-          <div class="image"><img src="images/pic03.jpg" alt="" /></div>
+          <div class="image"><img src="images/prosjekt3.jpg" alt="" /></div>
           <div class="content">
             <h2>
               Data Vizualisation & Advanced Analytics - Creating a Dashboard
