--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <img src="images/web-scraping.jpg" alt="" />
             </span>
             <header class="major">
-              <h3><a href="landing.html" class="link">Web-scraping Linkedin jobs in Oslo - Creating stats on qualified skills </script></a></h3>
+              <h3><a href="landingWebScrapingLink.html" class="link">Web-scraping Linkedin jobs in Oslo - Creating stats on qualified skills </script></a></h3>
               <p>Python - Web Scraping - Text Mining</p>
             </header>
           </article>
